--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 autopep8==1.5.4
+flake8==3.8.4
+mccabe==0.6.1
 MouseInfo==0.1.3
 numpy==1.19.3
 opencv-python==4.4.0.46
 Pillow==8.0.1
+playsound==1.2.2
 PyAutoGUI==0.9.52
 pycodestyle==2.6.0
+pyflakes==2.2.0
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
+pynput==1.7.1
 pyperclip==1.8.1
+pypiwin32==223
 PyRect==0.1.4
 PyScreeze==0.1.26
 python-imageseach-drov0==1.0.6
 python3-xlib==0.15
 PyTweening==1.0.3
+six==1.15.0
 toml==0.10.2
